fix：tags categories

--- a/_config.yml
+++ b/_config.yml
@@ -101,6 +101,17 @@ search:
   field: post
   format: html
 
+# Hexo-generator-feed
+feed:
+    type: atom
+    path: atom.xml
+    limit: 20
+    hub:
+    content:
+    content_limit: 140
+    content_limit_delim: ' '
+    order_by: -date	
+
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
