--- a/themes/ayer/_config.yml
+++ b/themes/ayer/_config.yml
@@ -87,7 +87,7 @@ copyright_type: 0
 
 # 是否启用搜索
 # 需要安装hexo-generator-searchdb(https://github.com/theme-next/hexo-generator-searchdb)
-search: false
+search: true
 
 # RSS订阅(先安装hexo-generator-feed插件，再去博客根目录config进行配置)
 # 不想显示可以直接留空
