--- a/themes/ayer/_config.yml
+++ b/themes/ayer/_config.yml
@@ -39,7 +39,7 @@ progressBar: true
 # 文章太长，截断按钮文字(在需要截断的行增加此标记：<!--more-->)
 excerpt_link: 阅读更多...
 # 如果你嫌每篇文章手动加more标记比较麻烦，又不想在首页全文显示，可以把excerpt_all设置成true，这样首页只会显示文章归档
-excerpt_all: false
+excerpt_all: true
 
 # 是否开启代码复制按钮
 copy_btn: true
@@ -67,7 +67,7 @@ image_viewer: true
 # 是否开启字数统计(关闭请设置enable为false)
 # 也可以单独在md文件里Front-matter设置`no_word_count: true`属性，来自定义关闭字数统计
 word_count:
-  enable: false
+  enable: true
   # 只在文章详情显示(不在首页显示)
   only_article_visit: true
 
@@ -128,7 +128,7 @@ music:
 
 # 访问量统计(不蒜子)
 busuanzi:
-  enable: false
+  enable: true
 
 # 友盟cnzz统计(url填js代码src链接)
 cnzz:
