--- a/themes/ayer/_config.yml
+++ b/themes/ayer/_config.yml
@@ -132,8 +132,8 @@ busuanzi:
 
 # 友盟cnzz统计(url填js代码src链接)
 cnzz:
-  enable: false
-  url: https://s9.cnzz.com/z_stat.php?id=1278069914&web_id=1278069914
+  enable: true
+  url: https://s9.cnzz.com/z_stat.php?id=1279227341&web_id=1279227341
 
 # Google Analytics
 google_analytics: ""
