--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 # 指定语言环境
 language: node_js
 
-# 设置相应版本
-node_js: stable
+# 指定node_js版本
+node_js:
+  - 10
   
 # 指定缓存模块，可选。缓存可加快编译速度。
 cache:
@@ -25,7 +26,7 @@ after_script:
   - git config user.name "shiyinianjian"
   - git config user.email "15101695969@163.com"
   - git add .
-  - git commit -m "Travis CI Auto Builder at $(date +'%Y-%m-%d %H:%M:%S')"
+  - git commit -m "Travis CI Auto Builder"
   - git push --force --quiet "https://${GH_TOKEN}@${GH_PAGES}" master:master
   
 #deploy:
